Revision history for CRDT

{{$NEXT}}

0.0.6  2020-11-22T16:46:14Z
    - Fix timestamp
    - LLW-Register

0.0.5  2020-11-20T09:12:13Z
    - OR-Set

0.0.4  2020-11-20T06:08:16Z
    - make required merge data required

0.0.3  2020-11-20T06:01:44Z
    - export()
    - merge exported data

0.0.2  2020-11-20T05:09:48Z
    - LWW-Element-Set

0.0.1  2020-11-19T19:42:48Z
    - Initial version