@@ -5,6 +5,16 @@ use PN-Counter;
 use CRDTTester;
 
 my PN-Counter $a .= new;
+my $iid = $a.instance-id;
+
+test-supply $a.changed, *.<positive>{$iid}, 1, 0, "positive";
+test-supply $a.changed, *.<negative>{$iid}, 0, 0, "negative";
+test-supply $a.changed, *.<positive>{$iid}, 2, 1, "positive";
+test-supply $a.changed, *.<negative>{$iid}, 0, 1, "negative";
+test-supply $a.changed, *.<positive>{$iid}, 3, 2, "positive";
+test-supply $a.changed, *.<negative>{$iid}, 0, 2, "negative";
+test-supply $a.changed, *.<positive>{$iid}, 4, 3, "positive";
+test-supply $a.changed, *.<negative>{$iid}, 0, 3, "negative";
 
 is $a.value, 0, "Starts with 0";
 is +$a,      0, "... +again";
@@ -23,23 +33,34 @@ is +$a,  3, "... ok";
 is (++$a).Int, 4, "++X";
 is +$a,  4, "... ok";
 
+#my $*TEST-DEBUG = True;
+test-supply $a.changed, *.<positive>{$iid}, 4, 0, "positive";
+test-supply $a.changed, *.<negative>{$iid}, 4, 0, "negative";
+test-supply $a.changed, *.<positive>{$iid}, 4, 1, "positive";
+test-supply $a.changed, *.<negative>{$iid}, 5, 1, "negative";
+test-supply $a.changed, *.<positive>{$iid}, 4, 2, "positive";
+test-supply $a.changed, *.<negative>{$iid}, 6, 2, "negative";
+test-supply $a.changed, *.<positive>{$iid}, 4, 3, "positive";
+test-supply $a.changed, *.<negative>{$iid}, 7, 3, "negative";
 
-
-
-lives-ok { $a.decrement xx 4 }, "Increments";
+lives-ok { $a.decrement: 4 }, "Decrements";
 is $a.value, 0, "... worked";
 is +$a,      0, "... +again";
 
-lives-ok { $a-- }, "Increments++";
+lives-ok { $a-- }, "Decrements--";
 is $a.value, -1, "... works";
 is +$a,      -1, "... +again";
 
 is $a--, -1, "X--";
 is +$a,  -2, "... ok";
 
-is (--$a).Int, -3, "++X";
+is (--$a).Int, -3, "--X";
 is +$a,  -3, "... ok";
 
+test-supply $a.changed, *.<positive>{$iid}, 17, 0, "positive";
+test-supply $a.changed, *.<negative>{$iid}, 7,  0, "negative";
+test-supply $a.changed, *.<positive>{$iid}, 17, 1, "positive";
+test-supply $a.changed, *.<negative>{$iid}, 10,  1, "negative";
 
 $a += 13;
 is +$a, 10, "+=";
@@ -74,5 +95,19 @@ test-merge $a, $b, -> $res, :$last-merge {
     is $copy--,    9, "does it post decr?";
     is +$copy,     8, "... ?";
 }
+
+#my $*TEST-DEBUG = True;
+test-supply $a.merged, *.<positive>{$iid}, 17,  0, "positive iid";
+test-supply $a.merged, *.<positive><b>,     1,  0, "positive b";
+test-supply $a.merged, *.<negative>{$iid}, 10,  0, "negative iid";
+test-supply $a.merged, *.<positive>{$iid}, 17,  1, "positive iid";
+test-supply $a.merged, *.<positive><b>,     1,  1, "positive b";
+test-supply $a.merged, *.<negative>{$iid}, 10,  1, "negative iid";
+test-supply $a.merged, *.<negative><c>,     6,  1, "negative c";
+
+$a.merge: %(:positive{ b => 1 }, :negative{});
+is +$a, 8;
+$a.merge: %(:positive{ b => 1 }, :negative{ c => 6 });
+is +$a, 2;
 
 done-testing;
