@@ -3,8 +3,12 @@ use lib ".";
 use lib "t";
 use CRDTTester;
 use LWW-Register;
+use CRDT::Timestamp;
 
 my LWW-Register $a .= new;
+
+test-supply $a.changed, *.<value>, 42, 0;
+test-supply $a.changed, *.<value>, 13, 1;
 
 $a.set: 42;
 is $a.get, 42;
@@ -23,5 +27,11 @@ test-merge $a, $b, -> $res, :$last-merge {
     is $res.get, $last-merge.get with $last-merge;
     ok $res.get == ($a|$b).get;
 }
+
+test-supply $a.merged, *.<value>, 3.14, 0;
+test-supply $a.merged, *.<value>, "bla", 1;
+
+$a.merge: %( :value(3.14), :timestamp(CRDT::Timestamp.new: :5counter, :instance-id<a>) );
+$a.merge: %( :value<bla>, :timestamp(CRDT::Timestamp.new: :6counter, :instance-id<a>) );
 
 done-testing;
