@@ -1,6 +1,8 @@
 Revision history for CRDT
 
 {{$NEXT}}
+    - emit event on change
+    - emit event on merge
 
 0.0.6  2020-11-22T16:46:14Z
     - Fix timestamp
